Error/success flash messages in admin screens now absolutely positioned to avoid screen 'jumping' on fadeOut

--- a/public/res/css/quiz.css
+++ b/public/res/css/quiz.css
@@ -79,6 +79,6 @@ strong.currentuser {
 }
 #contextual, #contextual2 {display:none;}
 a#editor {cursor:pointer;}
-#updater, #ajaxupdater {display:none;}
+#updater, #ajaxupdater {display:none;position: absolute;width:30%; text-align: center;left:25%;}
 p.signed {padding-right:20px;}
 .helper { display:none;}
